--- a/age-calculator-app-main/index.html
+++ b/age-calculator-app-main/index.html
@@ -16,17 +16,17 @@
 <div class="calculator-container">
   <div class="header">
    <div class="day">
-   <label for="day">Day</label>
+   <label for="day" class="label">Day</label>
    <input type="number" id="day" placeholder="DD">
    <span class="error-message"></span>
    </div> 
    <div class="month">
-    <label for="month">Month</label>
+    <label for="month" class="label">Month</label>
     <input type="number" id="month" placeholder="MM">
     <span class="error-message"></span>
    </div>
    <div class="year">
-    <label for="year">Year</label>
+    <label for="year" class="label">Year</label>
     <input type="number" id="year" placeholder="YYYY">
     <span class="error-message"></span>
    </div>
