--- a/age-calculator-app-main/index.html
+++ b/age-calculator-app-main/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="/index.css">
 </head>
 <body>
+  <h1>Unata's Age Calculator</h1>
 <div class="calculator-container">
   <div class="header">
    <div class="day">
