--- a/age-calculator-app-main/index.html
+++ b/age-calculator-app-main/index.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&family=Karla:ital,wght@0,200..800;1,200..800&family=Poppins&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   
   <title> Age calculator app</title>
-  <link rel="stylesheet" href="/index.css">
+  <link rel="stylesheet" href="./index.css">
 </head>
 <body>
   <h1>Unata's Age Calculator</h1>
@@ -49,6 +49,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
-  <script src="/index.js"></script>
+  <script src="./index.js"></script>
 </body>
 </html>
